==> guaiguaizyh/School--work/第6讲：模拟信号型传感器/普中电路板/光敏、热敏传感器/project/uart.c <==
#include <uart.h> 

void uart_init(u16 bps)
{ u8 t;
  SCON=0x50;//工作方式一：8位异步收发，波特率可变，允许接收数据
  PCON=0x80;//11.0592MHz时，SMOD=0，PCON=0x80;     12MHz时，SMOD=1，PCON=0x80; 
  TI=0;//软件清零，表示未发送完成
  EA=1;//开总中断
  ES=1;	//开串口中断
  TMOD&=0x0f;//T1设为方式2,8位自动装载模式
  TMOD|=0x20;  
  switch(bps)
  { case 1200:t=0xe8;break;
    case 2400:t=0xf4;break;
    case 4800:t=0xf3;break;	//11.0592MHz时，t=0xfa，波特率为4800;     12MHz时，t=0xf3，波特率为4800，此时误差较小0.16% 
    case 9600:t=0xfd;break;
  }
  TH1=t;
  TL1=t;
  TR1=1;//开启T1
}
   
void uart_send_ch(u8 ch)
{
  ES=0;	//关串口中断
  SBUF=ch;
  while(TI==0);//等待发送完成
  TI=0;	 //清除中断标记
  ES=1;	//开串口中断
}

void uart_send_str(u8 *str)//输出字符串到串口
{
	TI=1;
	printf("%s\n",str);
	while(!TI);
	TI=0;
}
